@@ -69,6 +69,10 @@
 		and the Standard PHP Library (SPL) extension.
                 </li>
 		<li>To support uploading of ZIP files, you need the PHP <tt>zip</tt> extension.</li>
+        <li>For proper support of multibyte strings (eg. UTF-8, which is
+            currently default), you should install mbstring and ctype
+            extensions.
+        </li>
             <li>You need GD2 support in PHP to display inline
                 thumbnails of JPEGs (&quot;image/jpeg: inline&quot;) with their
                 original aspect ratio</li>
